--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "fsevents": "^2.3.2",
-    "playwright-core": "^1.46.1"
+    "playwright-core": "^1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.46.1",
-    "@types/node": "^22.5.2"
+    "@playwright/test": "^1"
   },
   "scripts": {},
   "keywords": [],
